# python-project-52

./: .coverage  .env  .flake8  .gitignore  Makefile  README.md  build.sh  coverage.xml  db.sqlite3  makefile  pyproject.toml  ruff.toml  sonar-project.properties
.github/workflows/: build.yml
labels/: models.py  urls.py  views.py
labels/migrations/: 0001_initial.py
labels/templates/labels/: create.html  delete.html  index.html  update.html
locale/ru/LC_MESSAGES/: django.po
statuses/: models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
statuses/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/: settings.py  urls.py
tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_delete_label_alter_task_labels.py
tasks/templates/tasks/: create.html  delete.html  index.html  update.html  view.html
templates/: base.html  index.html
users/: forms.py  urls.py  views.py
users/templates/users/: create.html  delete.html  index.html  login.html  update.html
