[project]
name = "python-project-52"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.5",
    "gunicorn>=26.0.0",
    "psycopg>=3.3.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
]
