[project]
name = "python-project-52"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.5",
    "django-bootstrap5>=26.2",
    "django-filter>=25.2",
    "gunicorn>=26.0.0",
    "psycopg>=3.3.4",
    "python-dotenv>=1.2.2",
    "rollbar>=1.3.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
]

[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Your description"